test/sema/typeck/class/ctor-duplicate-named-argument.dora
class Foo { x: Int, y: Int }
fn g() {
    Foo(x = 1, y = 3, y = 4);
}
